@@ -7,6 +7,7 @@ import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
 
 public class DepartmentsTest {
+
     @Test
     public void whenMissed() {
         List<String> input = List.of("k1/sk1");
@@ -33,33 +34,33 @@ public class DepartmentsTest {
 
     @Test
     public void whenAscSort() {
-        List<String> input = List.of("k1/sk1/ssk1", "k1/sk1", "k1");
-        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = Arrays.asList("k1/sk1/ssk1", "k1/sk1", "k1");
+        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenRandomDecsSort1() {
-        List<String> input = List.of("k2/sk1", "k2", "k1/sk1", "k1");
-        List<String> expect = List.of("k2", "k2/sk1", "k1", "k1/sk1");
+        List<String> input = Arrays.asList("k2/sk1", "k2", "k1/sk1", "k1");
+        List<String> expect = Arrays.asList("k2", "k2/sk1", "k1", "k1/sk1");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenRandomDecsSort2() {
-        List<String> input = List.of("k2/sk1", "k1/sk1", "k2", "k2/sk1/ssk1", "k1");
-        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k1", "k1/sk1");
+        List<String> input = Arrays.asList("k2/sk1", "k1/sk1", "k2", "k2/sk1/ssk1", "k1");
+        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k1", "k1/sk1");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenRandomDecsSort3() {
-        List<String> input = List.of("k2/sk1", "k1/sk1", "k2", "k2/sk1/ssk2",
+        List<String> input = Arrays.asList("k2/sk1", "k1/sk1", "k2", "k2/sk1/ssk2",
                 "k1/sk1/ssk1", "k2/sk1/ssk1", "k1", "k1/sk1/ssk2");
-        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1",
+        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1",
                 "k2/sk1/ssk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
